# jetson-orin-st7789

./: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  pyproject.toml
docs/: HARDWARE_SETUP.md  PINOUT_GUIDE.md  WIRING_GUIDE.md
examples/: QUICK_REFERENCE.md  WIRING_PRESET_GUIDE.md  basic_colors.py  basic_colors_demo.py  shapes_demo.py  st7789_unit_tests.py  system_monitor_demo.py  text_demo.py
overlays/: README.md
src/jetson_orin_st7789/: __init__.py  driver.py  pinouts.py
tests/: st7789_unit_test.py  test_adafruit_default.py  test_import.py  test_jetson_default.py  test_waveshare_default.py
tools/: README.md  detect_fdt.sh  pin_inspector.py  tools_README.md
